--- a/app/src/main/res/layout/setting_layout.xml
+++ b/app/src/main/res/layout/setting_layout.xml
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:textSize="20sp" />
+
     </RelativeLayout>
 
     <View
@@ -99,27 +100,54 @@
             android:checked="true" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:layout_gravity="bottom"
         android:layout_weight="1"
+
         android:gravity="bottom"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingRight="20dp">
 
         <TextView
+            android:id="@+id/txtShare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="@dimen/_20sdp"
-            android:gravity="center"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:gravity="start"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:text="Share App"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/_10ssp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:id="@+id/txtReport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:gravity="start"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:text="Report Channel?"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/_10ssp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:gravity="start"
             android:text="Copyright 2020 Khabriya. \n All Rights Reserved."
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/_10ssp"
             android:textStyle="normal" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
